renamed dir, added youtube link

--- a/README
+++ b/README
@@ -1,1 +1,2 @@
-UDStackController similar to what LinkedIn app uses...
+UDStackViewController similar to what LinkedIn app uses...
+check out how it works @ http://www.youtube.com/watch?v=yHbUXie7a34
